--- a/app/assets/stylesheets/bones.scss
+++ b/app/assets/stylesheets/bones.scss
@@ -11,62 +11,52 @@ docs on using files coming ...
 
 */
 
-/*
---------------------------
-VENDOR ASSETS
--------------------------- */
-@import 'bones/vendor/normalize'; // normalizes for cross-browser consistency
+// vendor
+@import
+  'bones/vendor/normalize'; // normalizes for cross-browser consistency
 
-/*
---------------------------
-VARIABLES
--------------------------- */
-@import 'bones/variables/colors';
-@import 'bones/variables/globals';
-@import 'bones/variables/grid';
-@import 'bones/variables/typography';
-@import 'bones/variables/code';
-@import 'bones/variables/buttons';
-@import 'bones/variables/forms';
-@import 'bones/variables/tables';
-@import 'bones/variables/nav';
-@import 'bones/variables/images';
-@import 'bones/variables/helpers';
+// variables
+@import 
+  'bones/variables/colors',
+  'bones/variables/globals',
+  'bones/variables/grid',
+  'bones/variables/typography',
+  'bones/variables/code',
+  'bones/variables/buttons',
+  'bones/variables/forms',
+  'bones/variables/tables',
+  'bones/variables/nav',
+  'bones/variables/images',
+  'bones/variables/helpers';
 
-/*
---------------------------
-MIXINS
--------------------------- */
-@import 'bones/mixins/globals';
-@import 'bones/mixins/grid';
-@import 'bones/mixins/typography';
-@import 'bones/mixins/buttons';
-@import 'bones/mixins/forms';
-@import 'bones/mixins/nav';
+// mixins
+@import 
+  'bones/mixins/globals',
+  'bones/mixins/grid',
+  'bones/mixins/typography',
+  'bones/mixins/buttons',
+  'bones/mixins/forms',
+  'bones/mixins/nav';
 
-/*
---------------------------
-PARTIALS
--------------------------- */
-@import 'bones/partials/globals';
-@import 'bones/partials/grid';
-@import 'bones/partials/typography';
-@import 'bones/partials/code';
-@import 'bones/partials/buttons';
-@import 'bones/partials/forms';
-@import 'bones/partials/tables';
-@import 'bones/partials/nav';
-@import 'bones/partials/images';
-@import 'bones/partials/components';
+// partials
+@import 
+  'bones/partials/globals',
+  'bones/partials/grid',
+  'bones/partials/typography',
+  'bones/partials/code',
+  'bones/partials/buttons',
+  'bones/partials/forms',
+  'bones/partials/tables',
+  'bones/partials/nav',
+  'bones/partials/images',
+  'bones/partials/components';
 
-/*
---------------------------
-HELPERS
--------------------------- */
-@import 'bones/helpers/margin';
-@import 'bones/helpers/padding';
-@import 'bones/helpers/positioning';
-@import 'bones/helpers/color';
-@import 'bones/helpers/background';
-@import 'bones/helpers/border';
-@import 'bones/helpers/size';
+// helpers
+@import 
+  'bones/helpers/margin',
+  'bones/helpers/padding',
+  'bones/helpers/positioning',
+  'bones/helpers/color',
+  'bones/helpers/background',
+  'bones/helpers/border',
+  'bones/helpers/size';
