--- a/app/assets/stylesheets/bones.scss
+++ b/app/assets/stylesheets/bones.scss
@@ -28,6 +28,9 @@ docs on using files coming ...
   'bones/variables/nav',
   'bones/variables/images',
   'bones/variables/helpers';
+  
+// custom variables
+@import 'bones_config';
 
 // mixins
 @import 
