update for bones v1.0

--- a/app/assets/stylesheets/bones/config.scss
+++ b/app/assets/stylesheets/bones/config.scss
@@ -28,17 +28,17 @@
  * bones.css file.
  *
  */
-@import 'bones/config/colors';
-@import 'bones/config/_default';
-@import 'bones/config/wireframe';
-@import 'bones/config/typography';
-@import 'bones/config/buttons';
-@import 'bones/config/forms';
-@import 'bones/config/tables';
-@import 'bones/config/nav';
-@import 'bones/config/images';
-@import 'bones/config/components';
-@import 'bones/config/helpers';
+@import 'bones/bones-config/colors';
+@import 'bones/bones-config/_default';
+@import 'bones/bones-config/wireframe';
+@import 'bones/bones-config/typography';
+@import 'bones/bones-config/buttons';
+@import 'bones/bones-config/forms';
+@import 'bones/bones-config/tables';
+@import 'bones/bones-config/nav';
+@import 'bones/bones-config/images';
+@import 'bones/bones-config/components';
+@import 'bones/bones-config/helpers';
 
 /* Main Styles
 ============================ */
