--- a/app/assets/stylesheets/bones/config.scss
+++ b/app/assets/stylesheets/bones/config.scss
@@ -45,6 +45,7 @@
 @import 'bones/styles/_default'; // required
 @import 'bones/styles/wireframe';
 @import 'bones/styles/typography';
+@import 'bones/styles/icons';
 @import 'bones/styles/buttons';
 @import 'bones/styles/forms';
 @import 'bones/styles/tables';
