Add tel input type

--- a/app/assets/stylesheets/bones/styles/_forms.scss
+++ b/app/assets/stylesheets/bones/styles/_forms.scss
@@ -35,6 +35,10 @@ form {
     @include form-global();
     @include form-input();
   }
+  input[type=tel] {
+    @include form-global();
+    @include form-input();
+  }
   textarea {
     @include form-global();
     @include form-input();
