--- a/app/assets/stylesheets/bones/styles/_forms.scss
+++ b/app/assets/stylesheets/bones/styles/_forms.scss
@@ -39,6 +39,10 @@ form {
     @include form-global();
     @include form-input();
   }
+  input[type=number] {
+    @include form-global();
+    @include form-input();
+  }
   textarea {
     @include form-global();
     @include form-input();
